force-app/main/default/objects/bill__c/bill__c.object-meta.xml
<CustomObject>
    <description>bills of library</description>
    <label>bill</label>
    <nameField>
        <displayFormat>BILL-{0000}</displayFormat>
        <label>Bill Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>bills</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>