force-app/main/default/objects/bill__c/fields/aa__c.field-meta.xml
<CustomField>
    <fullName>aa__c</fullName>
    <label>aa</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>