force-app/main/default/objects/bill__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>The detailed</description>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>