force-app/main/default/objects/bill__c/fields/st__c.field-meta.xml
<CustomField>
    <fullName>st__c</fullName>
    <label>st</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>pending</fullName>
            </value>
            <value>
                <fullName>rejected</fullName>
            </value>
            <value>
                <fullName>done</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>